--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -5,7 +5,9 @@
     flex-direction: column;
     background-color: #fff;
     border-radius: 2rem;
+    
     @include for-tablet-up{
         flex-direction: row;
+        box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
     }
 }
