--- a/src/components/Result/result.scss
+++ b/src/components/Result/result.scss
@@ -11,6 +11,7 @@
     font-size: 1rem;
     color:$Light-lavender;
     padding: 1.5rem 3.62rem 2.5rem;
+    box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
     .result-circle{
         background: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0) 100%, rgba(37, 33, 201, 0) 100%);
         width: 140px;
@@ -41,6 +42,8 @@
         gap:0;
         padding-top: 2.37rem;
         justify-content: space-between;
+        
+        @include animation(drop-top, 2s,0);
         .result-title{
             font-size: 1.5rem;
             font-weight: $bold;
