--- a/src/components/Summary/summary.scss
+++ b/src/components/Summary/summary.scss
@@ -23,6 +23,11 @@
         border-radius:8rem;
     }
 
+    .continue-btn:hover{
+        background: linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
+        cursor: pointer;
+    }
+
     @include for-tablet-up{
         padding: 2.37rem 2.5rem 2rem;
         height: 512px;
