--- a/src/sass/utils/responsiveness.scss
+++ b/src/sass/utils/responsiveness.scss
@@ -9,3 +9,30 @@
         @content;
     }
 }
+
+@mixin animation($name, $duration, $delay){
+    animation-name: $name;
+    animation-duration: $duration;
+    animation-timing-function: ease;
+    animation-delay: $delay;
+}
+
+@keyframes fade-in {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+@keyframes drop-top {
+    from{
+        transform: translateY(-500px);
+        visibility: hidden;
+    }
+    to{
+        transform: translateY(0);
+        visibility: visible;
+    }
+}
